--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <script type="text/javascript" src="./extras/jquery.min.1.7.js"></script>
-<script type="text/javascript" src="./extras/modernizr.2.5.3.min.js"></script>
+<script type="text/javascript" src="./lib/turn.js"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
 <script src="todo.js"></script>
 <script src="./lib/zoom.min.js"></script>
 <link href="./css/font-awesome.min.css" rel="stylesheet">
+<link href="./css/magazine.css" rel="stylesheet">
+
 
 </head>
 <body ng-controller="BookController">
@@ -58,13 +61,13 @@
 
 <script type="text/javascript">
 
-yepnope({
-	test : Modernizr.csstransforms,
-	yep: ['./lib/turn.js'],
-	nope: ['./lib/turn.html4.min.js'],
-	both: ['css/magazine.css'],
-	// complete: loadApp
-});
+// yepnope({
+// 	test : Modernizr.csstransforms,
+// 	yep: ['./lib/turn.js'],
+// 	nope: ['./lib/turn.html4.min.js'],
+// 	both: ['css/magazine.css'],
+// 	// complete: loadApp
+// });
 
 </script>
 
